fixing the H2 not wraping problem

--- a/styles.css
+++ b/styles.css
@@ -62,13 +62,14 @@
   header {
     text-align: center;
   }
-  #title {
-    font-size: 3rem;
+  h2 {
+    font-size: 2rem;
     font-weight: 700;
     margin-bottom: 0.5rem;
+    text-align: center;
   }
   section h2 {
-      font-size: 1.4rem;
+      font-size: 1.5rem;
       font-weight: 700;
       margin: 1rem 0;
       text-align: center;
